# my-films-db-rfw

./: .gitignore  Makefile.toml  Shuttle.toml
api/lib/: Cargo.toml
api/lib/src/: health.rs
api/lib/src/film_repository/: mod.rs  postgres_film_repository.rs
api/lib/tests/: health.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
front/: Cargo.toml  Dioxus.toml  package-lock.json
front/public/: tailwind.css
front/src/: main.rs
front/src/components/: button.rs  film_modal.rs  footer.rs  header.rs  mod.rs
front/src/models/: button.rs  mod.rs
shared/: Cargo.toml
shared/src/: models.rs
