[package]
name = "api-shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
shuttle-actix-web = "0.41.0"
shuttle-runtime = "0.41.0"
tokio = "1.35.1"
shuttle-shared-db = { version = "0.41.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.3", features = [
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
tracing = "0.1.40"
api-lib = { path = "../lib" }
# static
actix-files = "0.6.5"
